--- a/templates/todos.html
+++ b/templates/todos.html
@@ -4,7 +4,11 @@
 <div class="col-md-4 col-md-offset-4">
     <h1>Todo List:</h1>
     <table class="table table-striped">
-        <th>#</th><th>User</th><th>Description</th><th></th>
+        <th>#</th>
+        <th>User</th>
+        <th>Description</th>
+        <th>Actions</th>
+        <th></th>
         {% for todo in todos %}
             <tr>
                 <td>{{ todo.id }}</td>
@@ -14,6 +18,22 @@
                        {{ todo.description }}
                     </a>
                 </td>
+
+                <td>
+                    {% if todo.complete == 0 %}
+                    <form method="post" action="{{ app.request.baseurl }}/todo/mark/{{ todo.id }}">
+                        <button class="btn btn-xs btn-primary" type="button" data-toggle="modal" data-target="#confirmMark"
+                                data-title="Add Todo" data-message="Are you sure you want to mark as complete this todo ?">
+                            Mark Complete
+                        </button>
+                    </form>
+                    {% else %}
+                    <button type="button" class="btn btn-xs btn-success">
+                        <span class="glyphicon glyphicon-ok glyphicon-white"></span>
+                    </button>
+                    {% endif %}
+                </td>
+
                 <td>
                     <form method="post" action="{{ app.request.baseurl }}/todo/delete/{{ todo.id }}">
                         <button type="submit" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove glyphicon-white"></span></button>
@@ -26,8 +46,9 @@
                 <td colspan="3">
                     <input type="textbox" name="description" required="required" class="small-6 small-center" placeholder="Description...">
                 </td>
+                <td></td>
                 <td>
-                    <button type="submit" class="btn btn-sm btn-primary">Add</button>
+                    <button type="submit" class="btn btn-lg btn-primary">Add</button>
                 </td>
             </form>
         </tr>
@@ -35,4 +56,56 @@
 
     {{ link | raw }}
 </div>
+
+<!-- Mark Modal Dialog -->
+<div class="modal fade" id="confirmMark" role="dialog" aria-labelledby="confirmMarkLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">Complete Todo</h4>
+            </div>
+
+            <div class="modal-body">
+                <p>Are you sure about this ?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-info" id="confirm_mark">Complete</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End mark complete modal-->
+
+{% endblock %}
+
+
+{% block javascripts %}
+
+<script type="text/javascript">
+    $(document).ready(function(){
+
+        // Mark confirmation modal
+        $('#confirmMark').on('show.bs.modal', function (e) {
+            $message = $(e.relatedTarget).attr('data-message');
+            $(this).find('.modal-body p').text($message);
+            $title = $(e.relatedTarget).attr('data-title');
+            $(this).find('.modal-title').text($title);
+
+            // Pass form reference to modal for submission on adding confirmation
+            var formAdd = $(e.relatedTarget).closest('form');
+            //console.log(formAdd);
+            $(this).find('.modal-footer #confirm_mark').data('form', formAdd);
+        });
+
+        //sumit add form
+        $('#confirmMark').find('.modal-footer #confirm_mark').on('click', function () {
+            $(this).data('form').submit();
+        });
+
+
+    });
+
+</script>
 {% endblock %}
