--- a/templates/todos.html
+++ b/templates/todos.html
@@ -1,15 +1,25 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<div class="col-md-4 col-md-offset-4">
+<div class="col-md-6 col-md-offset-2">
+
     <h1>Todo List:</h1>
+
+    <!--Flash messages-->
+    {% for message in app.session.getFlashBag.get('message') %}
+    <div class="alert alert-info">
+        {{ message }}
+    </div>
+    {% endfor %}
+    <!--End of Flash messages-->
+
     <table class="table table-striped">
         <th>#</th>
         <th>User</th>
         <th>Description</th>
-        <th>Actions</th>
-        <th></th>
-        <th></th>
+        <th>view</th>
+        <th>Delete</th>
+        <th>Mark Complete</th>
         {% for todo in todos %}
             <tr>
                 <td>{{ todo.id }}</td>
@@ -29,6 +39,15 @@
                 </td>
 
                 <td>
+                    <form method="post" action="{{ app.request.baseurl }}/todo/delete/{{ todo.id }}">
+                        <button class="btn btn-xs btn-danger" type="button" data-toggle="modal" data-target="#confirmDelete"
+                                data-title="Delete Todo" data-message="Are you sure you want to delete this todo ?">
+                            <span class="glyphicon glyphicon-remove glyphicon-white"></span>
+                        </button>
+                    </form>
+                </td>
+
+                <td>
                     {% if todo.complete == 0 %}
                     <form method="post" action="{{ app.request.baseurl }}/todo/mark/{{ todo.id }}">
                         <button class="btn btn-xs btn-primary" type="button" data-toggle="modal" data-target="#confirmMark"
@@ -43,11 +62,6 @@
                     {% endif %}
                 </td>
 
-                <td>
-                    <form method="post" action="{{ app.request.baseurl }}/todo/delete/{{ todo.id }}">
-                        <button type="submit" class="btn btn-xs btn-danger"><span class="glyphicon glyphicon-remove glyphicon-white"></span></button>
-                    </form>
-                </td>
             </tr>
         {% endfor %}
         <tr>
@@ -58,7 +72,7 @@
                 <td></td>
                 <td></td>
                 <td>
-                    <button type="submit" class="btn btn-lg btn-primary">Add</button>
+                    <button type="submit" class="btn btn-md btn-primary">Add</button>
                 </td>
             </form>
         </tr>
@@ -88,6 +102,26 @@
 </div>
 <!-- End mark complete modal-->
 
+<!-- Delete Modal Dialog -->
+<div class="modal fade" id="confirmDelete" role="dialog" aria-labelledby="confirmDeleteLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">Delete Permanently</h4>
+            </div>
+            <div class="modal-body">
+                <p>Are you sure about this ?</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirm">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Delete modal-->
+
 {% endblock %}
 
 
@@ -111,6 +145,24 @@
 
         //sumit add form
         $('#confirmMark').find('.modal-footer #confirm_mark').on('click', function () {
+            $(this).data('form').submit();
+        });
+
+
+        // delete confirmation modal
+        $('#confirmDelete').on('show.bs.modal', function (e) {
+            $message = $(e.relatedTarget).attr('data-message');
+            $(this).find('.modal-body p').text($message);
+            $title = $(e.relatedTarget).attr('data-title');
+            $(this).find('.modal-title').text($title);
+
+            // Pass form reference to modal for submission on delete confirmation
+            var form = $(e.relatedTarget).closest('form');
+            $(this).find('.modal-footer #confirm').data('form', form);
+        });
+
+        <!-- submits form for delete -->
+        $('#confirmDelete').find('.modal-footer #confirm').on('click', function () {
             $(this).data('form').submit();
         });
 
