--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,14 @@
 {% block content %}
     <div class="col-md-4 col-md-offset-4">
         <h1>Login</h1>
+        <!--Flash Login messages-->
+        {% for message in app.session.getFlashBag.get('login_message') %}
+        <div class="alert alert-info">
+            {{ message }}
+        </div>
+        {% endfor %}
+        <!--End of Flash messages-->
+
         <form class="form-horizontal login-form" method="POST" action="/login">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
