--- a/templates/login.html
+++ b/templates/login.html
@@ -14,12 +14,12 @@
         <form class="form-horizontal login-form" method="POST" action="/login">
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-                <input type="text" class="form-control" name="username" placeholder="Username">
+                <input type="text" required class="form-control" name="username" placeholder="Username">
             </div>
 
             <div class="input-group">
                 <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-                <input type="password" class="form-control" name="password" placeholder="Password">
+                <input type="password" required class="form-control" name="password" placeholder="Password">
             </div>
             <div class="form-group">
                 <div class="col-sm-12 controls">
